# IB-Physics-trainer

./: CMakeLists.txt  README.md  acceleration_velocity_time.cpp  acceleration_velocity_time.h  add_vectors.cpp  add_vectors.h  continue.cpp  continue.h  cue_cards.cpp  cue_cards.h  graph_analysis.cpp  graph_analysis.h  input_handling.cpp  input_handling.h  main.cpp  velocity_distance_time.cpp  velocity_distance_time.h
includes/: acceleration_velocity_time.cpp  acceleration_velocity_time.h  add_vectors.cpp  add_vectors.h  calorimeter.cpp  calorimeter.h  circuit_analysis.cpp  circuit_analysis.h  connected_carts.cpp  connected_carts.h  continue.cpp  continue.h  cue_cards.cpp  cue_cards.h  dc_motor.cpp  dc_motor.h  doppler.cpp  doppler.h  efficiency.cpp  efficiency.h  electromotive_force.cpp  electromotive_force.h  energy_types.cpp  energy_types.h  evit.cpp  evit.h  fma.cpp  fma.h  force_pairs.cpp  force_pairs.h  friction.cpp  friction.h  graph_analysis.cpp  graph_analysis.h  grav_attraction.cpp  grav_attraction.h  half_life.cpp  half_life.h  hanging_weight_pulley.cpp  hanging_weight_pulley.h  (+38 more)
phys-tool-functionality/: main.cpp
