cmake_minimum_required(VERSION 4.0)
project(ib_phys_tool)

set(CMAKE_CXX_STANDARD 20)

add_executable(ib_phys_tool main.cpp
        includes/input_handling.h
        includes/input_handling.cpp
        includes/cue_cards.cpp
        includes/cue_cards.h
        includes/velocity_distance_time.cpp
        includes/velocity_distance_time.h
        includes/acceleration_velocity_time.cpp
        includes/acceleration_velocity_time.h
        includes/graph_analysis.cpp
        includes/graph_analysis.h
        includes/add_vectors.cpp
        includes/add_vectors.h
        includes/projectile_motion.cpp
        includes/projectile_motion.h
        includes/fma.cpp
        includes/fma.h
        includes/continue.cpp
        includes/continue.h
        includes/force_pairs.cpp
        includes/force_pairs.h
        includes/friction.cpp
        includes/friction.h
        includes/grav_attraction.cpp
        includes/grav_attraction.h
        includes/spring_force.cpp
        includes/spring_force.h
        includes/connected_carts.cpp
        includes/connected_carts.h
        includes/hanging_weight_pulley.cpp
        includes/hanging_weight_pulley.h
        includes/wfd.cpp
        includes/wfd.h
        includes/mech_energy.cpp
        includes/mech_energy.h
        includes/power.cpp
        includes/power.h
        includes/energy_types.cpp
        includes/energy_types.h
        includes/efficiency.cpp
        includes/efficiency.h
        includes/heat_capacity.cpp
        includes/heat_capacity.h
        includes/latent_heat.cpp
        includes/latent_heat.h
        includes/calorimeter.cpp
        includes/calorimeter.h
        includes/iqt.cpp
        includes/iqt.h
        includes/veq.cpp
        includes/veq.h
        includes/evit.cpp
        includes/evit.h
        includes/material_resistance.cpp
        includes/material_resistance.h
        includes/ohms_law.cpp
        includes/ohms_law.h
        includes/circuit_analysis.cpp
        includes/circuit_analysis.h
        includes/dc_motor.cpp
        includes/dc_motor.h
        includes/electromotive_force.cpp
        includes/electromotive_force.h
        includes/transformer_coils.cpp
        includes/transformer_coils.h
        includes/wave_speed.cpp
        includes/wave_speed.h
        includes/mach_num.cpp
        includes/mach_num.h
        includes/wave_beats.cpp
        includes/wave_beats.h
        includes/doppler.cpp
        includes/nucleus_charge.cpp
        includes/nucleus_charge.h
        includes/half_life.cpp
        includes/half_life.h
        includes/photon_energy.cpp
        includes/photon_energy.h
)
